small spell chenges

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                     </div>
                     <div class="card-content">
                         <span class="category-tag">Social Media</span>
-                        <h3>Instagram Video Ad</h3>
+                        <h3>Social Media Video Ads</h3>
                         <p>Short-form video ad optimized for Instagram campaigns.</p>
                     </div>
                 </div>
@@ -465,7 +465,6 @@
                 <div class="footer-col">
                     <h4>Contact Us</h4>
                     <ul>
-                        <li><a href="mailto:neha@adsai.ai"><span>📧</span> neha@adsai.ai</a></li>
                         <li><a href="mailto:business@adsai.ai"><span>📧</span> business@adsai.ai</a></li>
                         <li><a href="tel:+919133187000"><span>📞</span> +91 91331 87000</a></li>
                         <li><a href="tel:+919052204000"><span>📞</span> +91 90522 04000</a></li>
@@ -496,4 +495,5 @@
     </script>
 
 </body>
+
 </html>
