--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 <div class="mobile-menu-btn" onclick="toggleMenu()">☰</div>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#work">Our Work</a></li>
+                    <li><a href="#work">Our Services</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -775,7 +775,7 @@
                         <li><a href="mailto:business@adsai.ai?subject=Business%20Partnership"><span>📧</span> business@adsai.ai</a></li>
                         <li><a href="tel:+919133187000"><span>📞</span> +91 91331 87000</a></li>
                         <li><a href="tel:+919052204000"><span>📞</span> +91 90522 04000</a></li>
-                        <li><a href="#"><span>📍</span> Hyderabad, India</a></li>
+                        <li><a href="https://www.google.com/maps/place/Hyderabad,+Telangana" target="_blank" rel="noopener noreferrer"><span>📍</span> Hyderabad, India</a></li>
                     </ul>
                 </div>
 
@@ -861,4 +861,3 @@
 
 </body>
 </html>
-
