--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
 
             </div>
             <div class="copyright">
-                <p>&copy; 2025 AdsAi Portfolio. All Rights Reserved.</p>
+                <p>© 2025 AdsAi Portfolio. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
